--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,10 @@ button {
     font-family: sans-serif;
     font-size: 1.1em;
 }
+
+#modal-wrapper {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
