--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 #map {
     height: 650px;
-    width: 80%;
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    margin-top: 20px;
 }
 
 button {
