Alinged date filter to right

--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,12 @@ button {
     outline: solid;
     margin-top: 15px;
 }
+
+#date-filter {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#date-filter input {
+    margin: 0 10px;
+}
