--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ button {
     display: block;
 }
 
+.date-content p a {
+    color: black;
+    text-decoration: none;
+}
+
 .show {
     display: block;
 }
