--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+body {
+    font-family: sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+#all-data {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#display-runs, #saved-runs {
+    max-width: 50%;
+}
+
 #map {
     height: 650px;
     width: 90%;
