--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@ h1 {
     justify-content: center;
 }
 
-#display-runs, #saved-runs {
-    max-width: 50%;
-}
+/* #display-runs, #saved-runs {
+    max-width: 100%;
+} */
 
 .header-btns {
     display: flex;
@@ -33,10 +33,21 @@ h1 {
 
 #map {
     height: 650px;
-    width: 90%;
+    /* width: 90%;
     margin: 0 auto;
     padding-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 20px; */
+}
+
+#modal-content {
+    position: relative;
+    left: 9%;
+}
+
+.track-btns {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
 
 /* button {
@@ -53,8 +64,8 @@ h1 {
     width: 80%;
     height: 80%;
     position: fixed;
-    outline: solid;
-    margin-top: 15px;
+    /* outline: solid;
+    margin-top: 15px; */
 }
 
 /* #data-filter {
