--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 body {
     font-family: sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
 
 h1 {
@@ -8,8 +15,14 @@ h1 {
 
 #all-data {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
+}
+
+#display-runs {
+    margin: 0 0 -15px 30px;
 }
 
 /* #display-runs, #saved-runs {
