--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,9 @@ h1 {
     margin-top: 30px;
 }
 
-#display-runs {
+/* #display-runs {
     margin: 0 0 -15px 30px;
-}
+} */
 
 /* #display-runs, #saved-runs {
     max-width: 100%;
