--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,15 @@ h1 {
     border: none;
 }
 
+#save-data {
+    background-color: blue;
+    color: white;
+    border-radius: 25%;
+    font-size: 55px;
+    padding: 10px 20px;
+    border: none;
+}
+
 #map {
     height: 550px;
     bottom: 80px;
