--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,20 @@ h2 {
     font-weight: 700;
     background-color: blue;
     color: white;
-    border-radius: 8px;
-    padding: 5px 10px;
+    padding: 10px 32px;
     border: none;
+    border-radius: 8px;
 }
+
+/* .filter {
+    border-radius: 8px 8px 0 0;
+} */
+
+/* .reset-btn {
+    border-radius: 8px;
+} */
+
+
 
 .start {
     display: flex;
@@ -128,9 +138,9 @@ h2 {
     position: absolute;
     z-index: 1;
     background-color: blue;
-    border-radius: 0 8px 8px 8px;
+    border-radius: 0 0 8px 8px;
     padding-top: 6px;
-    margin-left: 7px;
+    margin-top: -5px;
 }
 
 .data-content p {
