Comment out unused element

--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,10 @@ h2 {
     margin: 10px 15px 0 0;
 } */
 
-#saved-data {
+/* #saved-data {
     font-family: sans-serif;
     font-size: 1.1em;
-}
+} */
 
 #modal-wrapper {
     visibility: hidden;
