Applied styling to stop/save btn window size 675px

--- a/styles.css
+++ b/styles.css
@@ -251,4 +251,9 @@ p {
         padding: 19px 32px;
         font-size: 60px;
     }
+
+    #save-data {
+        font-size: 63px;
+        padding: 12px 23px;
+    }
 }
