Adjusted header-btn margins at screen size 1600px

--- a/styles.css
+++ b/styles.css
@@ -257,3 +257,11 @@ p {
         padding: 12px 23px;
     }
 }
+
+/******* Min-Width 1600px ********/
+
+@media(min-width: 1600px) {
+    .header-btns {
+        margin: 0 19%;
+    }
+}
