--- a/styles.css
+++ b/styles.css
@@ -105,14 +105,17 @@ footer {
 }
 
 #modal-content {
-    position: relative;
-    left: 9%;
+    position: absolute;
+    width: 100%;
+    left: 30px;
+    bottom: 30px;
 }
 
 .track-btns {
-    display: flex;
-    justify-content: center;
     margin-top: -40px;
+    position: relative;
+    bottom: 31px;
+    left: 100px;
 }
 
 /* button {
