--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body {
     flex-direction: column;
 }
 
+.bkg-img {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 main {
     flex: 1;
 }
