--- a/styles.css
+++ b/styles.css
@@ -91,26 +91,26 @@ footer {
     background-color: #41667a;
     color: #dcd7d5;
     border-radius: 25%;
-    font-size: 56px;
-    padding: 10px 20px;
+    font-size: 60px;
+    padding: 5px 15px;
     border: none;
 }
 
 #map {
-    height: 550px;
+    height: 525px;
 }
 
 #modal-content {
     position: absolute;
     width: 100%;
     left: 10%;
-    bottom: 30%;
+    bottom: 27%;
 }
 
 .track-btns {
     display: flex;
     justify-content: center;
-    margin: 40px 0 -75px 0;
+    margin: 10px 0;
 }
 
 #modal-wrapper {
@@ -118,6 +118,14 @@ footer {
     width: 80%;
     height: 600px;
     position: fixed;
+}
+
+#modal-close {
+    color: #dcd7d5;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 30px;
 }
 
 .data-content {
@@ -256,11 +264,11 @@ p {
 
 /******* Min-Width 1150px ********/
 @media(min-width: 1150px) {
-    div#map {
+    .map-wrapper {
         width: 900px;
-        display: block;
         margin: 0 auto;
     }
+
 }
 
 /******* Min-Width 1600px ********/
